# AndroidTest

./: ACTIONBAR_FIX_SUMMARY.md  E541.keystore  JNI_TUTORIAL.md  MVI_INTEGRATION_SUMMARY.md  NETWORK_SIMULATION_SUMMARY.md  ROOM_DATABASE_AND_LOGGING_SUMMARY.md  USER_LIST_FIXES_SUMMARY.md  build.gradle  gradle.properties  platform.jks  settings.gradle
.augment/rules/: rule-base.md
.cursor/rules/: android-conventions.mdc  bluetooth-development.mdc  java-style.mdc  jetpack-components.mdc  kotlin-style.mdc  mvi-architecture.mdc  project-structure.mdc  testing-and-build.mdc
annotation_processor/: build.gradle
app/: build.gradle
app/libs/: BtPhoneSDK_debug_20250401_1433.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/drawable/: avatar_background.xml  bg_toggle_button.xml  bg_toggle_group.xml  button_circle_background.xml  counter_display_background.xml  history_background.xml  ic_clear_cache.xml  ic_empty_users.xml  ic_filter.xml  ic_sort.xml  info_tag_background.xml  loading_background.xml  online_status_background.xml  search_background.xml
app/src/main/res/layout/: activity_coil.xml  activity_contactindex.xml  activity_coroutine.xml  activity_counter.xml  activity_custom_ctrl_res_one.xml  activity_fragment_test.xml  activity_gesturedetector.xml  activity_group.xml  activity_main.xml  (+20 more)
basicsample/: build.gradle
basicsample/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
testSDK/: build.gradle
weatherclient/: build.gradle
weatherclient/src/main/: AndroidManifest.xml
(+160 files in other folders)
